--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "chat-example",
   "version": "0.0.0",
-  "description": "A chat example to showcase how to use `socket.io` with a static `express` server with `async` for control flow.",
+  "description": "A webhook for facebook messenger that uses `socket.io` with a static `express` server with `async` for control flow.",
   "main": "server.js",
   "repository": "",
-  "author": "Mostafa Eweda <mo.eweda@gmail.com>",
+  "author": "iara",
   "dependencies": {
     "async": "~0.2.8",
-    "body-parser": "1.15.0",
-    "watson-developer-cloud": "2.0.1",
+    "body-parser": "^1.15.0",
+    "express": "^4.15.4",
     "htmlparser": "1.7.7",
-    "request": "2.72.0",
-    "socket.io": "~0.9.14"
+    "request": "^2.72.0",
+    "socket.io": "~0.9.14",
+    "watson-developer-cloud": "2.0.1"
   }
 }
